name:                opengl-dlp-stereo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brian W Bush
maintainer:          consult@brianwbush.info
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable handa-parplanes
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
               ,       GLUT
               ,       OpenGL
               ,       vector
  hs-source-dirs:      src
  default-language:    Haskell2010
