name:                opengl-dlp-stereo
version:             0.1.2.1
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brian W Bush
maintainer:          consult@brianwbush.info
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Graphics.Rendering.DLP
  build-depends:    base   >=  4.6
               ,    OpenGL >=  2.8
               ,    vector >= 0.10
  hs-source-dirs:   src
  default-language: Haskell2010

executable opengl-dlp-test
  main-is:          Main.hs
  build-depends:    base   >=  4.6
               ,    GLUT   >=  2.4
               ,    OpenGL >=  2.8
               ,    vector >= 0.10
  hs-source-dirs:   src
  default-language: Haskell2010
